--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@ html {
 	height:100%;
 }
 .wrap {
-	background:#2a6722;
+	background-image:url(bg.jpg);
+	background-size: 100% auto;
 	width:100%;
 	height:100%;
 }
