--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html {
 	height:100%;
 }
 .wrap {
-	background-image:url(bg.jpg);
+	background:#00450f url(bg.jpg) no-repeat;
 	background-size: 100% auto;
 	width:100%;
 	height:100%;
