--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ html, body {
 html {
     font-size: 100%;
 }
+body {
+	padding:0;
+	margin:0;
+}
 .module {
 	height:0;
 	position:relative;
@@ -31,6 +35,8 @@ html {
 	text-align:center;
 	margin-bottom:5.6%; /*42*/
 	position:relative;
+	background: url(dial.png) 112.28% top no-repeat;
+	background-size: auto 100%;
 }
 #dial_start {
 	display:block;
