--- a/style.css
+++ b/style.css
@@ -35,8 +35,8 @@ body {
 	text-align:center;
 	margin-bottom:5.6%; /*42*/
 	position:relative;
-	background: url(dial.png) 112.28% top no-repeat;
-	background-size: auto 100%;
+	/*background: url(dial.png) 112.28% top no-repeat;
+	background-size: auto 100%;*/
 }
 #dial_start {
 	display:block;
